test/parser/fail/nobindselect.ang
f : (select Type) -> (Type -> Type) -> Type
f x f = f x